--- a/website-flex/index.html
+++ b/website-flex/index.html
@@ -7,13 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 
 <body>
     <!-- https://wireframe.cc/ikQQcf -->
 
-    <header>
-        <div class="col-3"><img src="images/logoLitunihammer.png" alt=""></div>
+    <header class="container">
+        <div class="col-11"><img src="images/logoLitunihammer.png" alt=""></div>
+        
+        <div class="col-1 derecha">
+            <a href="https://www.facebook.com/Lituniwargames"><i class="fab fa-facebook-f"> </i></a>
+            <a href="https://www.instagram.com/litunihammer/?hl=es"> <i class="fab fa-instagram"></i></a>
+
+        </div>
         
     </header>
 
@@ -125,7 +132,7 @@
 
     </footer>
 
-
+    <script src="js/all.js"></script>
 
 </body>
 
